Add tempo dictionary feature
Displays list of tempo indications in drawer & uses TempoRangeDialog to help user pick tempo.
Data is stored in SQLite database.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="drawer_open">Open options</string>
     <string name="drawer_close">Close options</string>
+    <string name="pick_language">Pick a language</string>
 </resources>
